--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,53 @@
 blinker==1.9.0
 certifi==2024.8.30
+chardet==5.2.0
 charset-normalizer==3.4.0
 click==8.1.7
+cmdstanpy==1.2.5
 colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
 dash==2.18.2
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 Faker==33.1.0
 Flask==3.0.3
+fonttools==4.55.3
 greenlet==3.1.1
+gunicorn==23.0.0
+holidays==0.63
 idna==3.10
 importlib_metadata==8.5.0
+importlib_resources==6.4.5
 itsdangerous==2.2.0
 Jinja2==3.1.4
+kiwisolver==1.4.7
 MarkupSafe==3.0.2
+matplotlib==3.10.0
 nest-asyncio==1.6.0
 numpy==2.1.3
 packaging==24.2
 pandas==2.2.3
+pillow==11.0.0
 plotly==5.24.1
+prophet==1.1.6
 psycopg2==2.9.10
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
+reportlab==4.2.5
 requests==2.32.3
 retrying==1.3.4
+seaborn==0.13.2
 setuptools==75.6.0
 six==1.17.0
 SQLAlchemy==2.0.36
+stanio==0.5.1
 tenacity==9.0.0
+tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 Werkzeug==3.0.6
 zipp==3.21.0
-gunicorn
